[gd_scene load_steps=10 format=3 uid="uid://fwqe5324iv5u"]

[ext_resource type="Script" path="res://Scripts/Entities/View/BuildingEntityView.gd" id="1_r7nyo"]
[ext_resource type="Texture2D" uid="uid://cp2j4aclx6fww" path="res://Assets/UI/Background512.png" id="1_wt7ck"]
[ext_resource type="Material" uid="uid://nqpwbe45b8cn" path="res://Shaders/InvalidBuildingPlacement.tres" id="2_a42hw"]
[ext_resource type="Texture2D" uid="uid://dgwg34udoytxd" path="res://Assets/BuildingsLarge/StairsDown128.png" id="3_5xaaf"]
[ext_resource type="Texture2D" uid="uid://cxnwi8bt7vm5k" path="res://Assets/UI/ArrowRightSource.png" id="4_ob7ls"]
[ext_resource type="Theme" uid="uid://b6iv3a38m6uhb" path="res://UI/UI.tres" id="5_jssou"]
[ext_resource type="PackedScene" uid="uid://d36ds4qy5esq1" path="res://UI/speech_bubble.tscn" id="6_h0tta"]

[sub_resource type="Gradient" id="Gradient_xdb0i"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ff2kk"]
gradient = SubResource("Gradient_xdb0i")
width = 1024
height = 1024
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)
metadata/_snap_enabled = true

[node name="BuildingEntityView" type="Node2D"]
script = ExtResource("1_r7nyo")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.803922)
texture_repeat = 2
texture = ExtResource("1_wt7ck")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 128, 128)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("2_a42hw")
texture = ExtResource("3_5xaaf")
centered = false

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 1

[node name="HandleArrows" type="Control" parent="."]
modulate = Color(0, 0, 0, 0.572549)
layout_mode = 3
anchors_preset = 0
offset_right = 128.0
offset_bottom = 128.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HandleArrows"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -32.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_ob7ls")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="HandleArrows"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 64.0
offset_right = 32.0
offset_bottom = 128.0
grow_horizontal = 2
rotation = -1.57079
mouse_filter = 2
texture = ExtResource("4_ob7ls")
expand_mode = 2

[node name="TextureRect4" type="TextureRect" parent="HandleArrows"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_right = 32.0
offset_bottom = 63.9999
grow_horizontal = 2
grow_vertical = 0
rotation = -1.57079
mouse_filter = 2
texture = ExtResource("4_ob7ls")
expand_mode = 2
flip_h = true

[node name="TextureRect2" type="TextureRect" parent="HandleArrows"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.0
offset_right = 64.0
offset_bottom = 32.0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_ob7ls")
expand_mode = 2
flip_h = true

[node name="CantBuildLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 128.0
offset_right = 177.0
offset_bottom = 195.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("5_jssou")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "Can't Build Here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(32, 32)
color = Color(1, 0.368627, 0.0509804, 1)
texture = SubResource("GradientTexture2D_ff2kk")
texture_scale = 0.2

[node name="SpeechBubble" parent="." instance=ExtResource("6_h0tta")]
visible = false
mouse_filter = 2

[connection signal="mouse_entered" from="Control" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_control_mouse_exited"]
